--- a/app/src/main/res/layout/activity_ingresos.xml
+++ b/app/src/main/res/layout/activity_ingresos.xml
@@ -6,4 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".Ingresos">
 
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="580dp"
+        android:onClick="Movimientos"
+        android:text="@string/btn_movimientos"
+        app:layout_constraintStart_toEndOf="@+id/button5"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="580dp"
+        android:onClick="Gasto"
+        android:text="@string/btn_Gasto"
+        app:layout_constraintStart_toEndOf="@+id/button4"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="580dp"
+        android:onClick="Inicio"
+        android:text="@string/btn_inicio"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
