--- a/app/src/main/res/layout/activity_ingresos.xml
+++ b/app/src/main/res/layout/activity_ingresos.xml
@@ -7,36 +7,47 @@
     tools:context=".Ingresos">
 
     <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="600dp"
+        android:onClick="Inicio"
+        android:text="@string/btn_inicio"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="580dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="600dp"
         android:onClick="Movimientos"
         android:text="@string/btn_movimientos"
         app:layout_constraintStart_toEndOf="@+id/button5"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/button13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="580dp"
-        android:onClick="Gasto"
-        android:text="@string/btn_Gasto"
-        app:layout_constraintStart_toEndOf="@+id/button4"
+        android:layout_marginStart="288dp"
+        android:layout_marginTop="536dp"
+        android:onClick="Guardar"
+        android:text="@string/btn_guardar"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="580dp"
-        android:onClick="Inicio"
-        android:text="@string/btn_inicio"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="600dp"
+        android:onClick="Gasto"
+        android:text="@string/btn_Gasto"
+        app:layout_constraintStart_toEndOf="@+id/button4"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -53,7 +64,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextNumber"
+        android:id="@+id/edt_cantidad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
@@ -72,10 +83,10 @@
         android:layout_marginStart="76dp"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_cantidad" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/edt_descripcion."
         android:layout_width="255dp"
         android:layout_height="59dp"
         android:layout_marginStart="76dp"
@@ -86,58 +97,48 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinazo" />
 
-    <Button
-        android:id="@+id/button13"
+    <EditText
+        android:id="@+id/edt_fecha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="280dp"
-        android:layout_marginTop="492dp"
-        android:text="@string/btn_guardar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnfecha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="356dp"
-        android:text="Fecha"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="56dp"
+        android:ems="10"
+        android:hint="Ingresa la fecha"
+        android:inputType="textPersonName"
+        app:layout_constraintStart_toEndOf="@+id/btnfecha"
+        app:layout_constraintTop_toBottomOf="@+id/edt_descripcion." />
 
     <Button
         android:id="@+id/btnhora"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="28dp"
         android:text="Hora"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnfecha" />
 
     <EditText
-        android:id="@+id/edt_fecha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="40dp"
-        android:ems="10"
-        android:hint="Ingresa la fecha"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toEndOf="@+id/btnfecha"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
-
-    <EditText
         android:id="@+id/edt_hora"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="Ingresa la hora"
         android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/btnhora"
         app:layout_constraintTop_toBottomOf="@+id/edt_fecha" />
+
+    <Button
+        android:id="@+id/btnfecha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="372dp"
+        android:text="Fecha"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
